--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,16 @@
       "src": "/(.*)",
       "dest": "index.js"
     }
-  ]
+  ],
+
+  "headers": [
+    {
+        "source": "/uploads/(.*)",
+        "headers": [
+            { "key": "Access-Control-Allow-Origin", "value": "*" },
+            { "key": "Access-Control-Allow-Methods", "value": "GET, OPTIONS" }
+        ]
+    }
+]
+
 }
