--- a/vercel.json
+++ b/vercel.json
@@ -6,13 +6,10 @@
       "use": "@vercel/node"
     }
   ],
-  "headers": [
+  "routes": [
     {
-      "source": "/uploads/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET, OPTIONS" }
-      ]
+      "src": "/(.*)",
+      "dest": "index.js"
     }
   ]
 }
