--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "path": "^0.12.7",
     "serverless-http": "^3.2.0"
