--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google-cloud/storage": "^7.15.2",
     "@vercel/blob": "^0.27.3",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
