--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "Music Education System",
+  "description": "African Music Archive is a platform that allows users to upload, share, and discover African music. It provides a user-friendly interface for artists to showcase their work and for listeners to explore a diverse range of music from across the continent.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
     "firebase-admin": "^13.2.0",
     "helmet": "^8.0.0",
